--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.0.4) testing; urgency=low
+
+  * Remove certs and use OPI defaults instead
+
+ -- Tor Krill <tor@openproducts.se>  Wed, 12 Mar 2014 16:11:51 +0100
+
 nginx-opi (1.0.3) testing; urgency=low
 
   * Add conflicts to apache and mod-php
