--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.0.8) testing; urgency=low
+
+  * Added comments to nginx config
+
+ -- PA Nilsson <pa@openproducts.se>  Tue, 17 Jun 2014 22:07:30 +0200
+
 nginx-opi (1.0.7) testing; urgency=low
 
   * Added default HTTP server config and redirect http to https on /oc
