--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.0.11) testing; urgency=low
+
+  * Update paths to certs and keys
+
+ -- Tor Krill <tor@openproducts.se>  Sun, 27 Jul 2014 11:21:13 +0200
+
 nginx-opi (1.0.10) testing; urgency=low
 
   * Removed duplicate "/" instance in config file
