--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.0.13) vili; urgency=low
+
+  * Increase fastcgi (php) timeout to 10 min
+
+ -- Tor Krill <tor@openproducts.se>  Sun, 07 Sep 2014 15:19:28 +0200
+
 nginx-opi (1.0.12) testing; urgency=low
 
   * Bump to solve dual uploaded packages
