--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.0.16) vili; urgency=low
+
+  * Add dependency on php apcu instead of xcache
+
+ -- Tor Krill <tor@openproducts.se>  Fri, 12 Sep 2014 12:48:34 +0200
+
 nginx-opi (1.0.15) vili; urgency=low
 
   * Disable access logging since its a bit verbose for emmc
