--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.1.0) vili; urgency=medium
+
+  * Updated NGINX config to better secure SSL connections
+
+ -- Tor Krill <tor@openproducts.se>  Thu, 15 Jan 2015 15:21:26 +0100
+
 nginx-opi (1.0.16) vili; urgency=low
 
   * Add dependency on php apcu instead of xcache
