Added changed to debian changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.1.1) vili; urgency=medium
+
+  * Added possibility to run http apps 
+
+ -- PA Nilsson <pa@openproducts.se>  Wed, 16 Nov 2016 10:05:31 +0100
+
 nginx-opi (1.1.0) vili; urgency=medium
 
   * Updated NGINX config to better secure SSL connections
