Updated link to certificate and key

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.1.2) vili; urgency=medium
+
+  * Updated link to certificate and key 
+
+ -- PA Nilsson <pa@openproducts.se>  Thu, 17 Nov 2016 15:04:45 +0100
+
 nginx-opi (1.1.1) vili; urgency=medium
 
   * Added possibility to run http apps 
