--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.1.3) vili; urgency=medium
+
+  * Createing default links for updated certificate paths 
+
+ -- PA Nilsson <pa@openproducts.se>  Fri, 18 Nov 2016 14:29:53 +0100
+
 nginx-opi (1.1.2) vili; urgency=medium
 
   * Updated link to certificate and key 
