--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.1.6) vili; urgency=medium
+
+  * Also update postrm script
+
+ -- Tor Krill <tor@openproducts.se>  Wed, 16 Aug 2017 09:42:02 +0200
+
 nginx-opi (1.1.5) vili; urgency=medium
 
   * Update to use systemd
