--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.1.17) vili; urgency=medium
+
+  * Make sure we use a safe digest when creating tempcerts
+
+ -- Tor Krill <tor@openproducts.se>  Wed, 09 Oct 2019 10:23:06 +0200
+
 nginx-opi (1.1.16) vili; urgency=medium
 
   * Generate tempcerts on postinst to make sure we have a usable
