--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nginx-opi (1.1.21) vili; urgency=medium
+
+  * Enable HTTP2
+
+ -- Tor Krill <tor@openproducts.se>  Tue, 01 Jun 2021 07:12:46 +0200
+
 nginx-opi (1.1.20) vili; urgency=medium
 
   * Make sure sites-enabled dir exists before trying to symlink file to it
