--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+nginx-opi (1.1.23) vigrid; urgency=medium
+
+  * Update php-fpm path
+  * Bullseye build
+
+ -- Tor Krill <tor@openproducts.se>  Tue, 01 Feb 2022 08:35:21 +0100
+
+nginx-opi (1.1.22) vili; urgency=medium
+
+  * Update min/max php fpm servers to try avoiding 502s on load
+
+ -- Tor Krill <tor@openproducts.se>  Thu, 04 Nov 2021 09:45:57 +0100
+
 nginx-opi (1.1.21) vili; urgency=medium
 
   * Enable HTTP2
